# GopiAI

./: # Анализ проблем и план исправлений.md  .env.example  .gitignore  .jscpd.json  2025-09-02-caveat-the-messages-below-were-generated-by-the-u.txt  2025-09-02-this-session-is-being-continued-from-a-previous-co.txt  =0.165.1  AGENTS.md  BRIEFCASE_PACKAGING_COMPLETE.md  CHANGELOG.md  CLAUDE.md  CREWAI_FIX_REPORT.md  CREWAI_STATUS_REPORT.md  CRITICAL_TASKS.md  CROSS_PLATFORM_BUILD_GUIDE.md  DUPLICATE_FUNCTIONS_ANALYSIS_REPORT.md  FINAL_REPORT.md  FIXES_REPORT.md  FIXES_SUMMARY.md  GEMINI.md  Integrating CrewAI with Gemini API and Google Cloud SDK: A Comprehensive Guide.md  KEYBOARD_SHORTCUTS.md  LICENSE  Okay, зайка, держись.md  PACKAGING_GUIDE.md  README.md  README_EN.md  README_gopiai.md  Refactoring plan.md  Responсe обработка  STARTUP_GUIDE.md  SYS_PATH_CLEANUP_PLAN.md  TASK_11_FINAL_COMPLETION_SUMMARY.md  TASK_12_COMPLETION_REPORT.md  TASK_13_WEB_TOOLS_COMPLETION_REPORT.md  TASK_1_1_DETAILED.md  TASK_1_2_DETAILED.md  TASK_1_3_DETAILED.md  TASK_1_4_DETAILED.md  TASK_2_1_DETAILED.md  (+88 more)
.acf/: tasks.json
.claude/: settings.local.json
.codex/: notes.md  plan.md  plan_filesystem_unification.md  refactoring_report.md
.openhands/: TASKS.md
.plandex-v2/: projects-v2.json
02_DOCUMENTATION/: CHANGELOG.md  LLM_PROVIDER_SWITCH_FIX_REPORT.md  MODEL_SWITCHING_IMPLEMENTATION_SUMMARY.md
03_UTILITIES/: reproduce_hang_with_debug.py  test_llm_switching.py  verify_llm_fix.py
GopiAI-CrewAI/: .gitignore  2025-09-02-this-session-is-being-continued-from-a-previous-co.txt  2025-09-07-this-session-is-being-continued-from-a-previous-co.txt  AI_Assistant_Capabilities.txt  LOGGING.md  MODEL_SWITCHING_FINAL_REPORT.md  MODEL_SWITCHING_README.md  README.md  README_CHAT_INTEGRATION.md  RELEASE_READINESS_REPORT.md  agent_templates.py  audio_tool.py  check_flask.py  check_models_status.py  config_manager.py  crewai_api_server.py  crewai_api_server.py.bak  demo_dynamic_instructions.py  enhanced_model_rotation.py  gemini_server_clean.py  gunicorn_config.py  install.bat  install.sh  iterative_execution_system.py  iterative_smart_delegator.py  llm_config_examples.py  llm_rotation_config.py  main.py  mem0_config.py  mem0_patch.py  migration_guide.py  rag_config.py  rag_system.py  rag_worker.py  requirements.server.txt  requirements.txt  requirements_server.txt  response.txt  response_refinement_integration.py  run_all_tests.py  (+23 more)
GopiAI-UI/: ENHANCED_STABILITY_REPORT.md  FIXES_SUMMARY.md  LOGGING.md  TASK_10_COMPLETION_REPORT.md  TASK_11_COMPLETION_REPORT.md  TASK_9_COMPLETION_REPORT.md  demo_enhanced_tab_management.py  demo_error_display_system.py  demo_stability_enhancements.py  main_with_logging.py  pyproject.toml  requirements.txt  requirements_ui.txt  run_with_enhanced_logging.sh  test_basic_functionality.py
ansi2html/: __init__.py
app/: config.py
backup_20250829_174535/: unrestricted_filesystem_tool.py  web_search_tool.py
ci_cd/: automated_test_runner.py  ci_cd_integration.py  deployment_system.py  send_notification.py
component_connections_reports/: component_connections_report.json  component_connections_report.txt
config/: config.toml  pytest.ini
crewai_env/: pyvenv.cfg
dependency_reports/: dependencies_report_20250505_091811.txt
docs/: ARCHITECTURE.md  BREAKING_CHANGES.md  KNOWN_ISSUES_DETAILED.md  browser_access.md  reasoning_agent.md  terminal_access.md
duplication_data/: classes_results_20250505_111157.json  fragments_results_20250505_111157.json  functions_results_20250505_111157.json
gopiai_integration/: __init__.py  model_config_manager.py  openrouter_client.py
imports_reports/: imports_graph_20250505_170246.json  imports_graph_20250505_213922.json
marked_code_reports/: changes_summary_20250505_091202.txt  changes_summary_20250505_091209.txt
minimal_version/: minimal_app.py  run_minimal.bat  simple_theme_manager.py
planning_strategies_resourses/: CursorLikePrompt.txt
project_cleaning_reports/: cleaning_report_20250505_122100.txt  cleaning_report_20250505_123430.txt  cleaning_report_20250505_131503.json
project_health/: duplicates_search_command
reports/: pylint_dot_venv.txt  ruff.txt  unimport.txt  vulture.txt
scripts/: analyze_all_safe_find.sh  reset_icon_cache.py  run_all_tests.py  run_comprehensive_tests.py  run_tests.py  update_imports.py
src/: README.md  compatibility_layer.js  mcp_server.js  package-lock.json  package.json  test_import.js  test_mcp_server.js  test_simple_browser.js  test_unified_browser_tools.js
test/: optimization_test_report.json  optimization_test_suite.js  test_browser_mcp_handler.js  test_compatibility_integration.js  test_compatibility_layer.js  test_mcp_browser_integration.js  test_unified_browser_tools.js  test_unified_filesystem_tools.js  test_unified_task_tool.js
test_infrastructure/: MASTER_TEST_RUNNER_README.md  TASK_14_IMPLEMENTATION_SUMMARY.md  automatic_resolution_detector.py  comprehensive_system_validator.py  coverage_reporter.py  failure_analyzer.py  fixtures.py  known_issues_integration.py  known_issues_manager.py  master_reporter.py  master_test_runner.py  memory_fixtures.py  problem_discovery.py  pytest_known_issues_plugin.py  pytest_markers.py  quality_tracker.py  service_manager.py  system_validator.py  test_config.py  test_discovery.py  test_documentation_generator.py  test_fixtures.py  test_performance_monitor.py  test_system_validation.py  test_task_18_validation.py  test_validation_optimizer.py  testing_dashboard.py  validate_test_documentation.py
tests/: test_crewai_tools.py  test_experience_manager.py  test_i18n_mainwindow.py  test_i18n_settingswidget.py  test_icon_manager.py  test_known_issues_system.py  test_performance_monitor.py  test_state_api_integration.py  test_state_sync.py  test_themed_icons.py  test_unified_filesystem_tool.js  test_unified_task_tool.js
txtai_env/: pyvenv.cfg
ui_env/: pyvenv.cfg
vulture_reports/: vulture_data_20250516_185138.json  vulture_errors_20250516_185138.txt
Новые темы/: Blue_theme.json  Dark_orange_theme.json  Green_theme.json  Orange_theme.json  (+7 more)
(+1096 files in other folders)
