[build-system]
requires = [
    "setuptools>=61.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "GopiAI"
version = "1.0.0"
description = "Advanced AI Platform with CrewAI Agent Orchestration and Qt-based UI"
readme = "README.md"
authors = [
    {name = "GopiAI Team", email = "noreply@gopiai.dev"},
]
license = {file = "LICENSE"}
keywords = [
    "ai", "crewai", "agents", "llm", "gemini", "artificial-intelligence", 
    "automation", "chat", "assistant", "ui", "qt", "python"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop", 
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Desktop Environment",
    "Topic :: Software Development :: User Interfaces",
]
requires-python = ">=3.10"

dependencies = [
    # Core dependencies
    "pyside6>=6.5.0",
    "requests>=2.28.0",
    "aiohttp>=3.8.0",
    
    # CrewAI dependencies
    "crewai>=0.165.0",
    "litellm>=1.0.0",
    "tavily-python",
    "google-generativeai",
    "langchain",
    "langchain-community",
    "langchain-google-genai",
    
    # UI dependencies
    "qasync>=0.24.0",
    "qdarkstyle>=3.1.0",
    
    # API Server dependencies
    "flask>=2.3.0",
    "flask-cors>=4.0.0",
    "gunicorn>=21.0.0",
    
    # Utility dependencies
    "psutil>=5.9.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "packaging>=23.0",
    "platformdirs>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-qt>=4.2.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/amritagopi/GopiAI"
Documentation = "https://github.com/amritagopi/GopiAI/wiki"
Repository = "https://github.com/amritagopi/GopiAI"
Issues = "https://github.com/amritagopi/GopiAI/issues"

[tool.briefcase]
project_name = "GopiAI"
bundle = "com.gopiai"
version = "1.0.0"
url = "https://github.com/amritagopi/GopiAI"
license = "MIT"
author = "GopiAI Team"
author_email = "noreply@gopiai.dev"

description = "GopiAI is an advanced AI platform featuring CrewAI agent orchestration with an intuitive Qt-based user interface. It provides seamless AI model rotation, intelligent task management, and a comprehensive toolkit for AI-powered automation."

icon = "GopiAI-Assets/gopiai/assets/GopiAI_LOGO" # Will try .icns, .ico, .png
splash = "GopiAI-Assets/gopiai/assets/wallpapers.png"

[tool.briefcase.app.gopiai]
formal_name = "GopiAI"
description = "Advanced AI Platform with Agent Orchestration"
sources = [
    "src/gopiai_app",
    "GopiAI-UI/gopiai", 
    "GopiAI-CrewAI",
    "GopiAI-Assets/gopiai/assets",
]
test_sources = ["tests"]

requires = [
    # GUI Framework
    "pyside6>=6.5.0",
    
    # Core AI/ML libraries
    "crewai>=0.165.0",
    "litellm>=1.0.0",  
    "google-generativeai",
    "tavily-python",
    "langchain",
    "langchain-community", 
    "langchain-google-genai",
    
    # API Server
    "flask>=2.3.0",
    "flask-cors>=4.0.0",
    "gunicorn>=21.0.0",
    
    # Async/Network
    "aiohttp>=3.8.0", 
    "requests>=2.28.0",
    "qasync>=0.24.0",
    
    # UI Enhancement
    "qdarkstyle>=3.1.0",
    
    # Utilities
    "psutil>=5.9.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "packaging>=23.0",
    "platformdirs>=3.0.0",
]

test_requires = [
    "pytest>=7.0.0",
    "pytest-qt>=4.2.0", 
    "pytest-asyncio>=0.21.0",
]

# Briefcase configuration for different platforms
[tool.briefcase.app.gopiai.macOS]
requires = [
    "toga-cocoa~=0.4.0",
]
icon = "GopiAI-Assets/gopiai/assets/GopiAI_LOGO"
entitlement = "entitlements.plist"

[tool.briefcase.app.gopiai.linux]
requires = [
    "toga-gtk~=0.4.0",
]
icon = "GopiAI-Assets/gopiai/assets/GopiAI_LOGO"
system_requires = [
    # Ubuntu/Debian packages
    "libgirepository1.0-dev",
    "libcairo2-dev", 
    "libpango1.0-dev",
    "libwebkit2gtk-4.1-dev",
    # Required for Qt
    "libxcb-xinerama0",
    "libxcb1",
    "libx11-xcb1",
]
system_runtime_requires = [
    # Minimal runtime requirements for system install
]

[tool.briefcase.app.gopiai.linux.appimage]
manylinux = "manylinux2014"
system_requires = [
    # Minimal requirements for AppImage - most deps are bundled
]

[tool.briefcase.app.gopiai.windows]
requires = [
    "toga-winforms~=0.4.0",
]
icon = "GopiAI-Assets/gopiai/assets/GopiAI_LOGO"

# Build configurations
[tool.briefcase.app.gopiai.windows.msi]
system_installer = true

[tool.briefcase.app.gopiai.macOS.dmg] 
installer_background = "GopiAI-Assets/gopiai/assets/wallpapers.png"

# Development tools configuration
[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

# PyTest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers", 
    "--strict-config",
    "--verbose",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "unit: marks tests as unit tests",
    "integration: marks tests as integration tests", 
    "ui: marks tests as UI tests (require display)",
]

filterwarnings = [
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]